--- a/Coursework-HarryOMalley/Coursework-HarryOMalley/Coursework-HarryOMalley.vcxproj
+++ b/Coursework-HarryOMalley/Coursework-HarryOMalley/Coursework-HarryOMalley.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ela010task1.c" />
+    <ClCompile Include="Functions.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Functions.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6D6E49D3-53CF-40A8-AD5F-E3AA72B758CD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -145,13 +152,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\ela010task1.c" />
-    <ClCompile Include="..\..\..\..\..\Desktop\Functions.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Desktop\Functions.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
