--- a/Coursework-HarryOMalley/Coursework-HarryOMalley/Coursework-HarryOMalley.vcxproj.filters
+++ b/Coursework-HarryOMalley/Coursework-HarryOMalley/Coursework-HarryOMalley.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\ela010task1.c">
+    <ClCompile Include="ela010task1.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Desktop\Functions.c">
+    <ClCompile Include="Functions.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Desktop\Functions.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Functions.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
